Fix javadoc generation errors.